<resources>
    <string name="app_name">ProteinTracker</string>
    <string name="test_untuk_update_view">Test Untuk Update View</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="help">Help</string>
    <string name="layout">Layout</string>
    <string name="relative">Relative</string>
    <string name="protetintracker">ProtetinTracker</string>
    <string name="textview">TextView</string>
    <string name="test">Test</string>
    <string name="activity">Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kirim_fragment">Kirim Fragment</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3     </string>
    <string name="_4">4     </string>
    <string name="_5">5     </string>
    <string name="_6">6     </string>
    <string name="nim_mhs">Nim Mhs</string>
    <string name="nama_mhs">Nama Mhs</string>
    <string name="tambah">+</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="nim">NIM</string>
    <string name="nama">Nama</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="agama">Agama</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="kelola_data_mahasiswa">Kelola Data Mahasiswa</string>
    <string name="button">Button</string>
    <string name="cardview">CardView</string>
    <string name="menu_pertama">Menu Pertama</string>
    <string name="menu_kedua">Menu Kedua</string>
    <string name="menu_ketiga">Menu Ketiga</string>
    <string name="fragment">Fragment</string>
    <string name="list">List</string>
    <string name="protein_tracker">Protein Tracker</string>
    <string name="beni_mulia_tabarus_72170177">Beni Mulia Tabarus_72170177</string>
    <string name="title_activity_setting_protein_tracker">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
